:bug: Fix tagInput alignment

--- a/src/scss/_objects/_components/tag-input.scss
+++ b/src/scss/_objects/_components/tag-input.scss
@@ -23,7 +23,9 @@ $tag-height: 24px;
 
     .cc__tag-input__input {
       margin: 0;
-      height: 30px;
+      height: 31px;
+      display: flex;
+      align-items: center;
     }
   }
 
